// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList renders as a span with custom margins 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 0;
  color: #2e2e2e;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-5:last-child {
  margin-right: 0;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                first label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                second label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                third label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with custom size 1`] = `
<DocumentFragment>
  .emotion-5 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-5:last-child {
  margin-right: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-18 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 0;
  color: #2e2e2e;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                first label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                second label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                third label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with defaults 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-5:last-child {
  margin-right: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 0;
  color: #2e2e2e;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                first label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                second label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                third label
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom margins 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 0;
  color: #2e2e2e;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-5 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-5:last-child {
  margin-right: 0;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url1.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                first label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url2.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                second label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url3.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                third label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom size 1`] = `
<DocumentFragment>
  .emotion-5 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-5:last-child {
  margin-right: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-18 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 0;
  color: #2e2e2e;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url1.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                first label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url2.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                second label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url3.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                third label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with defaults 1`] = `
<DocumentFragment>
  .emotion-18 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-5:last-child {
  margin-right: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 0;
  color: #2e2e2e;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
  color: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-18"
  >
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url1.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                first label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url2.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                second label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
    <li
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-3"
          data-testid="tag"
          href="www.url3.com"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                third label
              </span>
            </div>
          </div>
        </a>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
